[gd_scene load_steps=13 format=3 uid="uid://80ij5vnhkgl3"]

[ext_resource type="Script" path="res://Scripts/purplemob.gd" id="1_maf0k"]
[ext_resource type="Texture2D" uid="uid://cj4g4h1kp0inu" path="res://assetts/animations/enemies/purple_mob/enemy_idle-Sheet.png" id="2_dngh0"]
[ext_resource type="Texture2D" uid="uid://ceq5b8ye7ggwt" path="res://assetts/animations/enemies/purple_mob/enemy_walk-Sheet.png" id="3_d0lib"]
[ext_resource type="Texture2D" uid="uid://bor5asq6ljn5g" path="res://assetts/animations/enemies/purple_mob/enemy_attack-Sheet.png" id="4_lfs1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1y58"]
size = Vector2(40.8911, 23.3603)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfmky"]
size = Vector2(20.6833, 12.7344)

[sub_resource type="Animation" id="Animation_fopmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleMob_Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PurpleMob_Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dngh0")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PurpleMob_Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_xsysy"]
resource_name = "purplemob_attack"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleMob_Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PurpleMob_Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_lfs1x")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PurpleMob_Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.103755, 0.218151, 0.329887, 0.444284, 0.564001, 0.689039, 0.811416),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_5qfvb"]
resource_name = "purplemob_idle"
loop_mode = 2
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleMob_Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00314823),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PurpleMob_Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00157411),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dngh0")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PurpleMob_Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.134547, 0.306952, 0.409232, 0.50529, 0.661215, 0.817052, 0.936685),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 3, 3, 4, 5, 5]
}

[sub_resource type="Animation" id="Animation_07b00"]
resource_name = "purplemob_walk"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleMob_Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.149767, 0.294214, 0.423, 0.587944, 0.670136, 0.734465, 0.83812),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 2, 3, 4, 4, 4, 1, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PurpleMob_Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PurpleMob_Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_d0lib")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1nvr"]
_data = {
"RESET": SubResource("Animation_fopmg"),
"purplemob_attack": SubResource("Animation_xsysy"),
"purplemob_idle": SubResource("Animation_5qfvb"),
"purplemob_walk": SubResource("Animation_07b00")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5gtbu"]
radius = 6.18852

[node name="PurpleMob" type="CharacterBody2D"]
position = Vector2(2, -81)
scale = Vector2(1.4021, 1.76143)
collision_layer = 2
collision_mask = 13
script = ExtResource("1_maf0k")

[node name="PurpleMob_Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.42643, 27.2506)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_dngh0")
hframes = 6
region_enabled = true
region_rect = Rect2(5, 0, 379, 48)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3, 1)
collision_layer = 2
collision_mask = 4
metadata/_edit_lock_ = true

[node name="HurtboxEnemy" type="CollisionShape2D" parent="Area2D" groups=["hurtbox"]]
position = Vector2(-3.35661, 36.1461)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_a1y58")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.713216, 39.1727)
shape = SubResource("RectangleShape2D_kfmky")
debug_color = Color(0.734291, 0.387965, 0.692714, 0.42)

[node name="PurpleMob_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v1nvr")
}

[node name="MoveTimer" type="Timer" parent="."]

[node name="AggroArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9
metadata/_edit_lock_ = true

[node name="AggroCollision" type="CollisionShape2D" parent="AggroArea"]
position = Vector2(-38.5137, 31.7923)
rotation = -0.00850553
scale = Vector2(8.46221, -2.72113)
shape = SubResource("CircleShape2D_5gtbu")
debug_color = Color(0.911927, 0.284063, 0.204939, 0.42)

[connection signal="enemy_died" from="." to="." method="_on_enemy_died"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="area_entered" from="AggroArea" to="." method="_on_aggro_area_area_entered"]
